Removed comment field and fixed message coloring in dark mode

--- a/web/themes/custom/ohano/scss/_status_messages.scss
+++ b/web/themes/custom/ohano/scss/_status_messages.scss
@@ -29,7 +29,7 @@ div[data-drupal-messages] {
   }
 }
 
-html.dark {
+html.color-mode-dark {
   div[data-drupal-messages] {
     .message-type-status {
       background-color: var(--emerald700)
